name:                cl-data-structures
version:             2.0.0.0
synopsis:            A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:         Please see README.md
homepage:            https://github.com/koflerdavid/nfa-equivalence-code#readme
bug-reports:         https://github.com/koflerdavid/nfa-equivalence-code/issues
license:             BSD3
license-file:        LICENSE
author:              David Kofler
maintainer:          D.Kofler@student.uibk.ac.at
copyright:           2016-2018 David Kofler
category:            Algorithms
build-type:          Simple
cabal-version:       >= 2

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wcompat -Werror
                       -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  exposed-modules:     Data.CongruenceClosure
                     , Data.CongruenceClosure.Internal
                     , Data.Queue

  build-depends:       base         >= 4.7 && < 5
                     , containers

  default-language:    Haskell2010

test-suite cl-data-structures-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Driver.hs

  -- base-4.9 is required for semigroups
  build-depends:       base               >= 4.9 && < 5
                     , hspec
                     , cl-data-structures
                     , containers
                     , equivalence
                     , QuickCheck
                     , tasty
                     , tasty-discover
                     , tasty-hspec
                     , tasty-quickcheck
                     , test-invariant
                     , transformers

  other-modules:       Data.EquivalenceSpec
                     , Data.CongruenceClosureSpec
                     , Data.QueueTest

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall -Wcompat -Werror
                       -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:    Haskell2010

source-repository this
  type:              git
  location:          https://github.com/koflerdavid/nfa-equivalence-code
  tag:               v2.0
  subdir:            cl-data-structures

source-repository head
  type:              git
  location:          https://github.com/koflerdavid/nfa-equivalence-code
  subdir:            cl-data-structures
