name:                cl-regexes
version:             2.0.0.0
synopsis:            A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:         Please see README.md
homepage:            https://github.com/koflerdavid/nfa-equivalence-code#readme
license:             BSD3
license-file:        LICENSE
author:              David Kofler
maintainer:          D.Kofler@student.uibk.ac.at
copyright:           2016 David Kofler
category:            Algorithms
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2

  exposed-modules:     Algorithm.Regex.Derivation
                     , Algorithm.Regex.DfaConversion
                     , Algorithm.Regex.Equivalence
                     , Compiler.Regex
                     , Data.Dfa.Format.Hknt
                     , Data.Dfa.Format.Html
                     , Data.Dfa.Regex
                     , Data.Regex
                     , Data.Regex.Formats
                     , Language.RegexParser
                     , Language.RegexParser.Class
                     , Language.RegexParser.Internal
                     , Language.RegexParser.Tokeniser

  build-depends:       base               >= 4.7 && < 5
                     , cl-automata        >= 2.0
                     , cl-data-structures >= 2.0
                     , containers
                     , either
                     , equivalence
                     , lucid
                     , parsec             >= 3 && < 4
                     , text
                     , transformers

  default-language:    Haskell2010

test-suite cl-regexes-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base           >= 4.7 && < 5
                     , hspec
                     , hspec-discover
                     , QuickCheck
                     , cl-automata    >= 2.0
                     , cl-regexes     >= 2.0
                     , containers
                     , equivalence
                     , parsec         >= 3 && < 4
                     , text
                     , transformers

  other-modules:       Algorithm.Regex.DerivationSpec
                     , Compiler.RegexSpec
                     , Language.RegexParserSpec
                     , Language.RegexParser.InternalSpec
                     , Language.RegexParser.TokeniserSpec

source-repository head
  type:     git
  location: https://github.com/koflerdavid/nfa-equivalence-code
