name:               cl-regexes
version:            3.1.0.0
synopsis:           A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:        Please see README.md
homepage:           https://github.com/koflerdavid/nfa-equivalence-code#readme
bug-reports:        https://github.com/koflerdavid/nfa-equivalence-code/issues
license:            BSD3
license-file:       LICENSE
author:             David Kofler
maintainer:         D.Kofler@student.uibk.ac.at
copyright:          2016-2018 David Kofler
category:           Algorithms
build-type:         Simple
cabal-version:      >= 2

library
  default-language:   Haskell2010
  ghc-options:        -Wall -Wcompat -Werror
                      -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  hs-source-dirs:     src
  exposed-modules:    Algorithm.Regex.Derivation
                    , Algorithm.Regex.DfaConversion
                    , Algorithm.Regex.Equivalence
                    , Compiler.Regex
                    , Data.Regex
                    , Data.Regex.Formats
                    , Language.RegexParser
                    , Language.RegexParser.Class
                    , Language.RegexParser.Internal
                    , Language.RegexParser.Tokeniser

  -- base-4.8 is required for Bifunctors
  build-depends:      base               >= 4.8 && < 5
                    , bimap
                    , cl-automata        >= 2.0
                    , cl-data-structures >= 2.0
                    , containers
                    , parsec             >= 3 && < 4
                    , text
                    , transformers

test-suite cl-regexes-test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
                      -O2 -Wall -Wcompat -Werror
                      -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  hs-source-dirs:     test
  main-is:            Driver.hs

  build-depends:      base           >= 4.8 && < 5
                    , hspec
                    , cl-automata    >= 2.0
                    , cl-regexes
                    , parsec         >= 3 && < 4
                    , QuickCheck
                    , tasty
                    , tasty-discover
                    , tasty-hspec
                    , tasty-quickcheck
                    , text

  other-modules:      Algorithm.Regex.DerivationSpec
                    , Algorithm.Regex.EquivalenceSpec
                    , CommonInstances
                    , Compiler.RegexSpec
                    , Language.RegexParserSpec
                    , Language.RegexParser.InternalSpec
                    , Language.RegexParser.TokeniserSpec

source-repository this
  type:             git
  location:         https://github.com/koflerdavid/nfa-equivalence-code
  tag:              v2.0
  subdir:           cl-regexes

source-repository head
  type:             git
  location:         https://github.com/koflerdavid/nfa-equivalence-code
  subdir:           cl-regexes
