name:                cl-webservice
version:             2.0.0.0
synopsis:            A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:         Please see README.md
homepage:            https://github.com/koflerdavid/nfa-equivalence-code#readme
license:             BSD3
license-file:        LICENSE
author:              David Kofler
maintainer:          D.Kofler@student.uibk.ac.at
copyright:           2016 David Kofler
category:            Algorithms
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

library
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

  hs-source-dirs:      src
  exposed-modules:     Actions.Derivation
                     , Actions.FiniteAutomataEquivalence
                     , Actions.RegexEquivalence
                     , Actions.RegexToDfaConversion

  build-depends:       base        >= 4     && < 5
                     , aeson
                     , bimap
                     , bytestring  >= 0.9.1 && < 0.11
                     , cl-automata >= 2.0
                     , cl-regexes  >= 2.0
                     , containers
                     , snap-core   >= 1.0   && < 1.1
                     , snap-server >= 1.0   && < 1.1
                     , text

source-repository head
  type:     git
  location: https://github.com/koflerdavid/nfa-equivalence-code
