name:                 cl-webservice
version:              2.1.0.0
synopsis:             A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:          Please see README.md
homepage:             https://github.com/koflerdavid/nfa-equivalence-code#readme
bug-reports:          https://github.com/koflerdavid/nfa-equivalence-code/issues
license:              BSD3
license-file:         LICENSE
author:               David Kofler
maintainer:           D.Kofler@student.uibk.ac.at
copyright:            2016-2018 David Kofler
category:             Algorithms
build-type:           Simple
cabal-version:        >= 2

library
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings
  ghc-options:          -Wall -Wcompat -Werror
                        -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  hs-source-dirs:       src
  exposed-modules:      Actions.Derivation
                      , Actions.FiniteAutomataEquivalence
                      , Actions.RegexEquivalence
                      , Actions.RegexToDfaConversion

  build-depends:        base               >= 4     && < 5
                      , aeson
                      , bimap
                      , bytestring         >= 0.9.1 && < 0.11
                      , cl-automata        >= 2.0
                      , cl-automata-output >= 1.0
                      , cl-regexes         >= 3.0
                      , containers
                      , snap-core          >= 1.0   && < 1.1
                      , text

source-repository this
  type:               git
  location:           https://github.com/koflerdavid/nfa-equivalence-code
  tag:                v2.0
  subdir:             cl-webservice

source-repository head
  type:               git
  location:           https://github.com/koflerdavid/nfa-equivalence-code
  subdir:             cl-webservice
