name:                cl-website-tool
version:             2.0.0.0
synopsis:            A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:         Please see README.md
homepage:            https://github.com/koflerdavid/nfa-equivalence-code#readme
license:             BSD3
license-file:        LICENSE
author:              David Kofler
maintainer:          D.Kofler@student.uibk.ac.at
copyright:           2016 David Kofler
category:            Algorithms
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22
data-files:          static/index.html
                   , static/*.css
                   , static/*.js
                   , static/vendor/lmth/index.js

executable website
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_cl_website_tool
  autogen-modules:     Paths_cl_website_tool

  build-depends:       base          >= 4     && < 5
                     , aeson
                     , bytestring    >= 0.9.1 && < 0.11
                     , cl-webservice >= 2.0
                     , containers
                     , snap-core     >= 1.0   && < 1.1
                     , snap-server   >= 1.0   && < 1.1
                     , text

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

source-repository head
  type:     git
  location: https://github.com/koflerdavid/nfa-equivalence-code
