name:                 cl-website-tool
version:              2.1.0.0
synopsis:             A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:          Please see README.md
homepage:             https://github.com/koflerdavid/nfa-equivalence-code#readme
bug-reports:          https://github.com/koflerdavid/nfa-equivalence-code/issues
license:              BSD3
license-file:         LICENSE
author:               David Kofler
maintainer:           D.Kofler@student.uibk.ac.at
copyright:            2016-2018 David Kofler
category:             Algorithms
build-type:           Simple
cabal-version:        >= 2
data-files:           static/index.html
                    , static/*.css
                    , static/*.js
                    , static/vendor/lmth/index.js

executable website
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
                        -Wall -Wcompat -Werror
                        -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  hs-source-dirs:       app
  main-is:              Main.hs
  other-modules:        DataFiles
                      , Paths_cl_website_tool
  autogen-modules:      Paths_cl_website_tool

  build-depends:        base          >= 4.7   && < 5
                      , bytestring
                      , cl-webservice >= 2.0
                      , path
                      , snap-core     >= 1.0   && < 1.1
                      , snap-server   >= 1.0   && < 1.1

source-repository this
  type:               git
  location:           https://github.com/koflerdavid/nfa-equivalence-code
  tag:                v2.1
  subdir:             cl-website-tool

source-repository head
  type:               git
  location:           https://github.com/koflerdavid/nfa-equivalence-code
  subdir:             cl-website-tool
